@@ -1,18 +1,20 @@
 package com.cleanroommc.hackery;
 
-import jdk.internal.misc.Unsafe;
+import sun.misc.Unsafe;
 import net.minecraft.launchwrapper.LaunchClassLoader;
+import top.outlands.foundation.boot.UnsafeHolder;
+import zone.rong.imaginebreaker.ImagineBreaker;
 
 import javax.annotation.Nullable;
 import java.lang.reflect.*;
 import java.net.URL;
 import java.util.function.Predicate;
 
-@SuppressWarnings("removal")
+@SuppressWarnings("deprecation")
 public final class ReflectionHackery {
 
     private static final Field field$modifiers;
-    public static Unsafe unsafe;
+    public static Unsafe unsafe = UnsafeHolder.UNSAFE;
 
     static {
         Field modifiers;
@@ -27,23 +29,32 @@ public final class ReflectionHackery {
         }
         field$modifiers = modifiers;
         field$modifiers.setAccessible(true);
-        try {
-            final Field unsafeField = Unsafe.class.getDeclaredField("theUnsafe");
-            unsafeField.setAccessible(true);
-            unsafe = (Unsafe) unsafeField.get(null);
-        } catch (Exception e) {}
     }
 
     // Sensitive fields such as "modifiers" are only query-able via the native getDeclaredFields0 call
     public static @Nullable Field deepSearchForField(Class<?> clazz, Predicate<Field> search, boolean setAccessible) throws ReflectiveOperationException {
-        Method getDeclaredFields0 = Class.class.getDeclaredMethod("getDeclaredFields0", boolean.class); // TODO: cache?
-        getDeclaredFields0.setAccessible(true);
-        for (Field declaredField : (Field[]) getDeclaredFields0.invoke(clazz, false)) {
-            if (search.test(declaredField)) {
-                if (setAccessible) {
-                    declaredField.setAccessible(true);
+        Method getDeclaredFields0;
+        if (System.getProperty("java.vendor").contains("IBM")) {
+            getDeclaredFields0 = Class.class.getDeclaredMethod("getDeclaredFieldsImpl");
+            getDeclaredFields0.setAccessible(true);
+            for (Field declaredField : (Field[]) getDeclaredFields0.invoke(clazz)) {
+                if (search.test(declaredField)) {
+                    if (setAccessible) {
+                        declaredField.setAccessible(true);
+                    }
+                    return declaredField;
                 }
-                return declaredField;
+            }
+        } else {
+            getDeclaredFields0 = Class.class.getDeclaredMethod("getDeclaredFields0", boolean.class); // TODO: cache?
+            getDeclaredFields0.setAccessible(true);
+            for (Field declaredField : (Field[]) getDeclaredFields0.invoke(clazz, false)) {
+                if (search.test(declaredField)) {
+                    if (setAccessible) {
+                        declaredField.setAccessible(true);
+                    }
+                    return declaredField;
+                }
             }
         }
         return null;
@@ -74,7 +85,7 @@ public final class ReflectionHackery {
 
     public static void setField(Field field, Object owner, Object value) throws IllegalAccessException {
         if (Modifier.isStatic(field.getModifiers())) {
-            unsafe.ensureClassInitialized(field.getDeclaringClass());
+            ImagineBreaker.lookup().ensureInitialized(field.getDeclaringClass());
             putHelper(field.getType(), unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), value);
         } else {
             putHelper(field.getType(), owner, unsafe.objectFieldOffset(field), value);
@@ -83,7 +94,7 @@ public final class ReflectionHackery {
 
     public static void setBooleanField(Field field, Object owner, boolean value) throws IllegalAccessException {
         if (Modifier.isStatic(field.getModifiers())) {
-            unsafe.ensureClassInitialized(field.getDeclaringClass());
+            ImagineBreaker.lookup().ensureInitialized(field.getDeclaringClass());
             unsafe.putBoolean(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), value);
         } else {
             unsafe.putBoolean(owner, unsafe.objectFieldOffset(field), value);
@@ -92,7 +103,7 @@ public final class ReflectionHackery {
 
     public static void setByteField(Field field, Object owner, byte value) throws IllegalAccessException {
         if (Modifier.isStatic(field.getModifiers())) {
-            unsafe.ensureClassInitialized(field.getDeclaringClass());
+            ImagineBreaker.lookup().ensureInitialized(field.getDeclaringClass());
             unsafe.putByte(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), value);
         } else {
             unsafe.putByte(owner, unsafe.objectFieldOffset(field), value);
@@ -101,7 +112,7 @@ public final class ReflectionHackery {
 
     public static void setCharField(Field field, Object owner, char value) throws IllegalAccessException {
         if (Modifier.isStatic(field.getModifiers())) {
-            unsafe.ensureClassInitialized(field.getDeclaringClass());
+            ImagineBreaker.lookup().ensureInitialized(field.getDeclaringClass());
             unsafe.putChar(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), value);
         } else {
             unsafe.putChar(owner, unsafe.objectFieldOffset(field), value);
@@ -110,7 +121,7 @@ public final class ReflectionHackery {
 
     public static void setShortField(Field field, Object owner, short value) throws IllegalAccessException {
         if (Modifier.isStatic(field.getModifiers())) {
-            unsafe.ensureClassInitialized(field.getDeclaringClass());
+            ImagineBreaker.lookup().ensureInitialized(field.getDeclaringClass());
             unsafe.putShort(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), value);
         } else {
             unsafe.putShort(owner, unsafe.objectFieldOffset(field), value);
@@ -119,7 +130,7 @@ public final class ReflectionHackery {
 
     public static void setIntField(Field field, Object owner, int value) throws IllegalAccessException {
         if (Modifier.isStatic(field.getModifiers())) {
-            unsafe.ensureClassInitialized(field.getDeclaringClass());
+            ImagineBreaker.lookup().ensureInitialized(field.getDeclaringClass());
             unsafe.putInt(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), value);
         } else {
             unsafe.putInt(owner, unsafe.objectFieldOffset(field), value);
@@ -128,7 +139,7 @@ public final class ReflectionHackery {
 
     public static void setLongField(Field field, Object owner, long value) throws IllegalAccessException {
         if (Modifier.isStatic(field.getModifiers())) {
-            unsafe.ensureClassInitialized(field.getDeclaringClass());
+            ImagineBreaker.lookup().ensureInitialized(field.getDeclaringClass());
             unsafe.putLong(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), value);
         } else {
             unsafe.putLong(owner, unsafe.objectFieldOffset(field), value);
@@ -137,7 +148,7 @@ public final class ReflectionHackery {
 
     public static void setFloatField(Field field, Object owner, float value) throws IllegalAccessException {
         if (Modifier.isStatic(field.getModifiers())) {
-            unsafe.ensureClassInitialized(field.getDeclaringClass());
+            ImagineBreaker.lookup().ensureInitialized(field.getDeclaringClass());
             unsafe.putFloat(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), value);
         } else {
             unsafe.putFloat(owner, unsafe.objectFieldOffset(field), value);
@@ -146,7 +157,7 @@ public final class ReflectionHackery {
 
     public static void setDoubleField(Field field, Object owner, double value) throws IllegalAccessException {
         if (Modifier.isStatic(field.getModifiers())) {
-            unsafe.ensureClassInitialized(field.getDeclaringClass());
+            ImagineBreaker.lookup().ensureInitialized(field.getDeclaringClass());
             unsafe.putDouble(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), value);
         } else {
             unsafe.putDouble(owner, unsafe.objectFieldOffset(field), value);
@@ -155,7 +166,7 @@ public final class ReflectionHackery {
 
     public static Object getField(Field field, Object owner) throws IllegalAccessException {
         if (Modifier.isStatic(field.getModifiers())) {
-            unsafe.ensureClassInitialized(field.getDeclaringClass());
+            ImagineBreaker.lookup().ensureInitialized(field.getDeclaringClass());
             return getHelper(field.getType(), unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field));
         } else {
             return getHelper(field.getType(), owner, unsafe.objectFieldOffset(field));
@@ -164,7 +175,7 @@ public final class ReflectionHackery {
 
     public static boolean getBooleanField(Field field, Object owner) throws IllegalAccessException {
         if (Modifier.isStatic(field.getModifiers())) {
-            unsafe.ensureClassInitialized(field.getDeclaringClass());
+            ImagineBreaker.lookup().ensureInitialized(field.getDeclaringClass());
             return unsafe.getBoolean(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field));
         } else {
             return unsafe.getBoolean(owner, unsafe.objectFieldOffset(field));
@@ -173,7 +184,7 @@ public final class ReflectionHackery {
 
     public static byte getByteField(Field field, Object owner) throws IllegalAccessException {
         if (Modifier.isStatic(field.getModifiers())) {
-            unsafe.ensureClassInitialized(field.getDeclaringClass());
+            ImagineBreaker.lookup().ensureInitialized(field.getDeclaringClass());
             return unsafe.getByte(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field));
         } else {
             return unsafe.getByte(owner, unsafe.objectFieldOffset(field));
@@ -182,7 +193,7 @@ public final class ReflectionHackery {
 
     public static char getCharField(Field field, Object owner) throws IllegalAccessException {
         if (Modifier.isStatic(field.getModifiers())) {
-            unsafe.ensureClassInitialized(field.getDeclaringClass());
+            ImagineBreaker.lookup().ensureInitialized(field.getDeclaringClass());
             return unsafe.getChar(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field));
         } else {
             return unsafe.getChar(owner, unsafe.objectFieldOffset(field));
@@ -191,7 +202,7 @@ public final class ReflectionHackery {
 
     public static short getShortField(Field field, Object owner) throws IllegalAccessException {
         if (Modifier.isStatic(field.getModifiers())) {
-            unsafe.ensureClassInitialized(field.getDeclaringClass());
+            ImagineBreaker.lookup().ensureInitialized(field.getDeclaringClass());
             return unsafe.getShort(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field));
         } else {
             return unsafe.getShort(owner, unsafe.objectFieldOffset(field));
@@ -200,7 +211,7 @@ public final class ReflectionHackery {
 
     public static int getIntField(Field field, Object owner) throws IllegalAccessException {
         if (Modifier.isStatic(field.getModifiers())) {
-            unsafe.ensureClassInitialized(field.getDeclaringClass());
+            ImagineBreaker.lookup().ensureInitialized(field.getDeclaringClass());
             return unsafe.getInt(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field));
         } else {
             return unsafe.getInt(owner, unsafe.objectFieldOffset(field));
@@ -209,7 +220,7 @@ public final class ReflectionHackery {
 
     public static long getLongField(Field field, Object owner) throws IllegalAccessException {
         if (Modifier.isStatic(field.getModifiers())) {
-            unsafe.ensureClassInitialized(field.getDeclaringClass());
+            ImagineBreaker.lookup().ensureInitialized(field.getDeclaringClass());
             return unsafe.getLong(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field));
         } else {
             return unsafe.getLong(owner, unsafe.objectFieldOffset(field));
@@ -218,7 +229,7 @@ public final class ReflectionHackery {
 
     public static float getFloatField(Field field, Object owner) throws IllegalAccessException {
         if (Modifier.isStatic(field.getModifiers())) {
-            unsafe.ensureClassInitialized(field.getDeclaringClass());
+            ImagineBreaker.lookup().ensureInitialized(field.getDeclaringClass());
             return unsafe.getFloat(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field));
         } else {
             return unsafe.getFloat(owner, unsafe.objectFieldOffset(field));
@@ -227,7 +238,7 @@ public final class ReflectionHackery {
 
     public static double getDoubleField(Field field, Object owner) throws IllegalAccessException {
         if (Modifier.isStatic(field.getModifiers())) {
-            unsafe.ensureClassInitialized(field.getDeclaringClass());
+            ImagineBreaker.lookup().ensureInitialized(field.getDeclaringClass());
             return unsafe.getDouble(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field));
         } else {
             return unsafe.getDouble(owner, unsafe.objectFieldOffset(field));
